Change route paths and edit styling

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-	Contact me about the sample app at the <a href="#">contact page</a>
+	Contact me about the sample app at my <a href="http://conantonakos.com">personal website</a>.
 </p>
