--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,12 @@
 <footer class="footer">
   <small>
     <a href="http://railstutorial.org/">Demo Rails App</a>
-    by Constantine Antonakos
+    by <a href="http://conantonakos.com">Constantine Antonakos</a>
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",   '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
+      <li><%= link_to "About",   '/about' %></li>
+      <li><%= link_to "Contact", '/contact' %></li>
       <li><a href="http://news.railstutorial.org/">News</a></li>
     </ul>
   </nav>
